# proyecto-enci

./: .env.example  .gitignore  .pre-commit-config.yaml  ANALYSIS_REPORT.md  CHANGELOG.md  CONTABILIDAD_BEST_PRACTICES.md  GUIA_IMPORTADOR.md  README.md  RECUPERACION_PRODUCCION.md  REPORTE_FINAL.md  RESUMEN_OPTIMIZACION.md  main.py  manage.py  pyproject.toml  pytest.ini
config/: init.py  logging_config.py  settings.py  settings_production_example.py  urls.py
contabilidad/: admin.py  analytics.py  api.py  api_ml.py  api_ml_advanced.py  excel_export.py  forms.py  kardex_service.py  middleware.py  ml_advanced.py  ml_anomalies.py  ml_embeddings.py  ml_optimized.py  ml_predictions.py  ml_services.py  models.py  permissions.py  serializers.py  services.py  services_excel_import.py  test_anomalies.py  test_api.py  test_embeddings.py  test_excel_import.py  test_predictions.py  tests.py  throttling.py  urls.py  urls_api_ml.py  views.py
contabilidad/migrations/: 0001_initial.py  0001_squashed_0016_convert_int_pk_to_bigint.py  0002_empresa_visible_to_supervisor.py  0003_empresacomment.py  0004_alter_empresaasiento_options_and_more.py  0005_empresaasiento_anulado.py  0006_alter_empresacomment_section.py  0007_remove_empresatransaccion_parcial_and_more.py  0008_add_check_constraints.py  0009_alter_asiento_options_alter_plandecuentas_options_and_more.py  0010_fix_invalid_transactions.py  0011_add_performance_indexes.py  0012_empresatercero_delete_asiento_delete_transaccion_and_more.py  0013_empresatercero_delete_asiento_delete_transaccion_and_more.py  0014_empresatercero_delete_asiento_delete_transaccion_and_more.py  0015_empresatercero_delete_asiento_delete_transaccion_and_more.py  0016_convert_int_pk_to_bigint.py  0017_alter_empresaasiento_numero_asiento.py  0018_add_logo_eslogan_to_empresa.py  0019_remove_estado_situacion.py  0020_alter_empresacomment_options_and_more.py  0021_alter_plandecuentas_options.py  0022_alter_empresacomment_section_and_more.py  0022_anomaliadetectada_empresacuentaembedding_and_more.py  0023_convert_user_fk_to_bigint.py  0023_kardex_cierre_system.py  0024_add_metricas_cache.py  0024_fix_all_user_fk_types.py  0025_add_kardex_to_comments.py
contabilidad/templatetags/: __init__.py  financial_filters.py
core/: admin.py  apps.py  backends.py  forms.py  models.py  signals.py  tests.py  urls.py  views.py
core/migrations/: 0001_initial.py  0001_squashed_0006_migrate_existing_data_to_grupos.py  0002_invitation_referral.py  0003_notification.py  0004_alter_notification_options_and_more.py  0005_grupo_invitation_grupo_referral_grupo_and_more.py  0006_migrate_existing_data_to_grupos.py  0007_create_userprofile_table.py  0008_alter_userprofile_options.py  0009_userprofile_user.py  0010_notification_empresa_fk.py
core/templatetags/: __init__.py  notification_tags.py
docs/: ANALISIS_COMPLETO.md  API_ML_DOCUMENTATION.md  EJEMPLOS_HTTPIE.md  IMPLEMENTACION_FASES_2-4.md  IMPORTAR_PLAN_CUENTAS.md  MARIADB_ML_AI_OPTIMIZATION.md  MEJORAS_ADICIONALES_PROPUESTAS.md  MEJORAS_MODO_OSCURO_COMPLETO.md  OPORTUNIDADES_MEJORA.md  QUICK_WINS_ACTIVADOS.md  REPORTE_VERIFICACION_ML.md  RESUMEN_APIS_REST.md  SISTEMA_COLORES.md  SISTEMA_COMENTARIOS.md  UX_IMPROVEMENTS_GUIA.md  VALIDACION_JERARQUIA_CUENTAS.md  migrations.md
scripts/: asignar_padres_cuentas.py  create_contabilidad_test_data.py  create_kardex_tables.sql  generar_asientos_ejemplo.py  generar_datos_ml_prueba.py  generar_simple.py  maintenance.sh  run_contab_steps2.py  run_create_test.py  test_ml_apis.py  verify_bigint.py
static/css/: animations.css
static/js/: toast.js
templates/: 403.html  404.html  500.html  base.html  ux_demo.html
templates/components/: skeletons.html
templates/contabilidad/: _comments_section.html  _company_header.html  _company_header_minimal.html  _company_list.html  _company_nav.html  company_balance_comprobacion.html  company_detail.html  company_diario.html  company_estados_financieros.html  company_libro_mayor.html  company_mayor.html  company_periodos.html  company_plan.html  create_company.html  delete_company_confirm.html  edit_company.html  import_plan_cuentas.html  kardex_lista_productos.html  kardex_movimiento_form.html  kardex_producto_detalle.html  kardex_producto_form.html  ml_analytics.html  ml_anomalies.html  ml_dashboard.html  ml_embeddings.html  ml_predictions.html  (+2 more)
templates_excel/: plan_cuentas_template.xlsx
(+33 files in other folders)
