[project]
name = "proyecto-enci"
version = "0.1.0"
description = "Proyecto de Contabilidad ENCI"
authors = [
    { name = "elikat", email = "205855200+EliKat2005@users.noreply.github.com" }
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "django>=5.2.8",
    "mysqlclient>=2.2.7",
    "djangorestframework>=3.14.0",
    "drf-spectacular>=0.29.0",
    "django-cors-headers>=4.9.0",
    "python-dotenv>=1.2.1",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "openpyxl>=3.1.5",
    "pillow>=12.1.0",
    "scikit-learn>=1.8.0",
    "prophet>=1.2.1",
    "pandas>=2.3.3",
    "numpy>=2.4.1",
    "sentence-transformers>=5.2.0",
    "torch>=2.9.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6.9",
    "pre-commit>=3.7.1",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["config*", "core*", "contabilidad*"]
exclude = ["templates*", "static*", "scripts*"]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.uv]
# uv es el gestor de dependencias oficial del proyecto
# NO USAR pip. Todas las dependencias deben instalarse con:
#   uv sync
#
# Para agregar nuevas dependencias:
#   uv add nombre-paquete
#
# Para actualizar dependencias:
#   uv sync --upgrade
#
# Para ejecutar comandos en el entorno:
#   uv run python manage.py ...
#
# Para versiones específicas:
#   uv add "paquete>=1.0,<2.0"

[tool.ruff]
line-length = 100
target-version = "py313"
src = ["config", "core", "contabilidad"]
exclude = [
    ".git",
    ".venv",
    "venv",
    "build",
    "dist",
    "migrations",
    "proyecto_enci.egg-info",
]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "SIM", # flake8-simplify
    "DJ",  # Django rules
]
ignore = [
    "E501",  # long lines: mantener textos legibles sin romper por ahora
    "SIM105", "SIM210",  # simplificaciones opcionales
    "DJ001",  # null=True en CharField permitido en este proyecto
    "W191",   # tabs en tests heredados; no bloquear
    "W293",   # espacios en blanco en líneas en blanco
    "F405",   # nombres importados con * en ejemplos
    "B904",   # raise inside except chaining
    "E741",   # nombres ambiguos en variables locales
    "E722",   # bare except heredado
    "F841",   # variables asignadas sin uso en ejemplos/tests
    "DJ012",  # orden de métodos/fields en modelos heredados
    "SIM102", "SIM103",  # simplificaciones no críticas
]
fixable = ["ALL"]

[tool.ruff.lint.isort]
combine-as-imports = true
force-single-line = false
known-first-party = ["config", "core", "contabilidad"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"
skip-magic-trailing-comma = false
